# ForgeLLM

./: .gitignore  ACKNOWLEDGEMENTS.md  ACKNOWLEDGMENT.md  CHANGELOG.md  README.md  __init__.py  forgellm_cli.py  forgellm_web.py  model_server.py  pyproject.toml  test_base_model_detection.html  test_monitoring_polling.py  test_system_prompt_fix.py
docs/: BACKLOG.md  MODEL_SERVER_ARCHITECTURE.md  MODEL_SERVER_INTEGRATION.md  MODEL_SWITCHING_FIX.md  README.md  SYSTEM_PROMPT_BEST_PRACTICES.md  SYSTEM_PROMPT_FIX_SUMMARY.md  TESTING_GUIDE.md  UI_REDESIGN.md  USAGE_GUIDE.md  api_reference.md  architecture.md  cpt.md  data_flow.md  getting_started.md  message_editing_feature.md  perspectives.md  refactoring_api_unification.md  training-recommendations.md  web-refactoring.md
forgellm/: __init__.py  __main__.py
forgellm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
forgellm/api/: routes.py
forgellm/cli/: commands.py
forgellm/models/: model_fuser.py  model_manager.py  model_publisher.py
forgellm/server/: __init__.py  main.py
forgellm/training/: config.py  dashboard.py  data_processor.py  instruction_tuner.py  metrics_logger.py  process_manager.py  realtime_monitor.py  trainer.py
forgellm/utils/: model_architectures.json  model_architectures.py  text_stats.py
forgellm/web/: main.py  run.py
forgellm/web/routes/: views.py
forgellm/web/services/: socket_service.py
forgellm/web/static/: app.js
forgellm/web/static/js/: app.js
forgellm/web/templates/: base.html  index.html
tests/: test_gemma_system_prompt.py  test_message_editing.py  test_training_pipeline.py
(+17 files in other folders)
