[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgellm"
version = "0.1.0"
description = "API for LLM training, fine-tuning, monitoring, and testing with MLX-LM"
readme = "README.md"
authors = [
    {name = "Mnemosyne Team"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mlx-lm>=0.0.3",
    "mlx>=0.0.7",
    "numpy>=1.20.0",
    "flask>=2.0.0",
    "flask-socketio>=5.0.0",
    "plotly>=5.0.0",
    "psutil>=5.8.0",
    "huggingface-hub>=0.12.0",
    "matplotlib>=3.4.0",
    "filelock>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
]

[project.urls]
"Homepage" = "https://github.com/lpalbou/forgellm"
"Bug Tracker" = "https://github.com/lpalbou/forgellm/issues"

[project.scripts]
forgellm = "forgellm.__main__:main"
forgellm-web = "forgellm.web.run:main"

[tool.setuptools]
packages = ["forgellm"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 